--- a/src/app/home/components/ranking/ranking.component.html
+++ b/src/app/home/components/ranking/ranking.component.html
@@ -1,3 +1,5 @@
-<section *ngFor="let experience of experiences" >
-    <app-card [experience]="experience"></app-card>
-</section>
+<div [ngClass]="'ranking'">
+    <section *ngFor="let experience of experiences">
+        <app-card [experience]="experience"></app-card>
+    </section>
+</div>
