--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,3 +3,34 @@ body {
     margin: 0;
     font-family: 'Lato';
 }
+
+.form {
+    margin: 0 15px;
+    .control-form {
+        border: 1px solid $hof-color;
+        background-color: $bg-color;
+        margin: 10px 0;
+        padding: 3px 4px;
+        border-radius: 3px;
+        label {
+            font-size: 0.9em;
+            color: $hof-color;
+        }
+        input {
+            display: block;
+            width: 100%;
+            padding: 0;
+            margin:  0;
+            background-color: transparent;
+            border: 0;
+            outline: none;
+            color: $hof-color;
+        }
+        textarea {
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            height: 50px;
+        }
+    }
+}
