--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,4 +3,5 @@ $babu-color: #00A699;
 $arches-color: #FC642D;
 $hof-color: #484848;
 $foggy-color: #767676;
-
+$boder-color: #CCC;
+$bg-color: #F2F2F2;
