--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -33,4 +33,9 @@ body {
             height: 50px;
         }
     }
+    .error {
+        font-size: 0.78em;
+        color: red;
+        margin: 0;
+    }
 }
