--- a/src/app/home/components/card/card.component.scss
+++ b/src/app/home/components/card/card.component.scss
@@ -1,27 +1,30 @@
-div {
-    &:hover {
-        opacity: 1;
-        cursor: pointer;
-    }
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    height: 250px;
-    border-radius: 12px;
-    padding: 5px 10px;
-    background-size: cover;
-    margin: 0 6px;
-    opacity: 0.9;
-    h3 {
-        margin: 0;
-        width: 200px;
-        color: #FFF;
-        font-size: 1.2em;
-        font-weight: 300;
-    }
-    h4 {
-        margin: 0;
-        color: #FFF;
-        font-size: 0.9em;
+a {
+    text-decoration: none;
+    div {
+        &:hover {
+            opacity: 1;
+            cursor: pointer;
+        }
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        height: 250px;
+        border-radius: 12px;
+        padding: 5px 10px;
+        background-size: cover;
+        margin: 0 6px;
+        opacity: 0.9;
+        h3 {
+            margin: 0;
+            width: 200px;
+            color: #FFF;
+            font-size: 1.2em;
+            font-weight: 300;
+        }
+        h4 {
+            margin: 0;
+            color: #FFF;
+            font-size: 0.9em;
+        }
     }
 }
