--- a/src/app/signup/components/form-register/form-register.component.html
+++ b/src/app/signup/components/form-register/form-register.component.html
@@ -13,10 +13,13 @@
             <label>Correo Electronico:</label>
             <input placeholder="@" formControlName="email" type="email" name="emailText" />
         </div>
+        <span class="error">{{ getError('email') }}</span>
         <div class="control-form">
             <label>Contraseña</label>
             <input formControlName="password" type="password" name="passwordText" />
         </div>
+        <span class="error">{{ getError('password') }}</span>
+        <br/><br />
         <button (click)="register()" [disabled]="formGroup.invalid" >Registrarme</button>
     </form>
 </section>
