--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,10 @@ body {
     font-family: 'Lato';
 }
 
+.button-form {
+    margin: 10px 20px;
+}
+
 .form {
     margin: 0 15px;
     .control-form {
