--- a/src/app/booking/components/form-reserve/form-reserve.component.html
+++ b/src/app/booking/components/form-reserve/form-reserve.component.html
@@ -15,6 +15,6 @@
             <label>Descripción</label>
             <textarea formControlName="description" name="textDescription"></textarea>
         </div>
-        <button (click)="reserve()" [disabled]="formGroup.invalid" >Reservar</button>
+        <button class="button-form" (click)="reserve()" [disabled]="formGroup.invalid" >Reservar</button>
     </form>
 </section>
