--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,3 +1,3 @@
 <app-title [label]="experience?.description" ></app-title>
 <app-card [experience]="experience"></app-card>
-<button class="button-form" (click)="irReserva(experience?._id)" >Reservar</button>
+<button class="button-form button-detail" (click)="irReserva(experience?._id)" >Reservar</button>
